Bug 448343 - Some translation is missing from Krita's Android version
Summary: Some translation is missing from Krita's Android version
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Translation (other bugs)
Version First Reported In: 5.0.2
Platform: Android Android 11.x
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
: 455172 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-13 03:45 UTC by Tyson Tan
Modified: 2022-07-29 01:13 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
OK and Cancel buttons are not translated in Krita's Android version (168.96 KB, image/jpeg)
2022-01-13 03:45 UTC, Tyson Tan
Details
Template Category names are not translated in Krita's Android version (400.88 KB, image/jpeg)
2022-01-13 03:46 UTC, Tyson Tan
Details
Save/Save As/Export/Export - advanced buttons don't show translations. (55.46 KB, image/png)
2022-06-18 04:04 UTC, Eranthis stellata Maxim
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2022-01-13 03:45:03 UTC
Some translation is missing from Krita's Android version.

Here are the items I've noticed (I can't do much because I was using an android phone):

Qt dialogue buttons, like the OK, Cancel buttons.

Template category names in Create New Document dialogue.
Comment 1 Tyson Tan 2022-01-13 03:45:54 UTC
Created attachment 145389 [details]
OK and Cancel buttons are not translated in Krita's Android version
Comment 2 Tyson Tan 2022-01-13 03:46:23 UTC
Created attachment 145390 [details]
Template Category names are not translated in Krita's Android version
Comment 3 Alvin Wong 2022-01-13 12:16:09 UTC
I can't really confirm whether the Qt dialog buttons are untranslated, because those dialog buttons actually uses KWidgetsAddons. Checking the APK shows that `assets\locale\zh_CN\LC_MESSAGES\` only contains `krita.mo`, which is missing `kwidgetsaddons5_qt.qm`, `seexpr2_qt.qm` and a bunch of other translation files compared to the Windows package, so this would be why.

It appears that the APK also does not include the translation files from Qt, which I'd expect to see them in `assets\translations\` following Qt's existing convention (with names like `qt_zh_CN.qm`).

---

I can't reproduce the issue with the template category names. I tried setting the language to Simplified Chinese and they show up translated for me.

Are you using the default language setting or have you set an override in Krita? What does the "Language" field say in the "show system info for bug report" dialog?
Comment 4 Tyson Tan 2022-01-14 04:05:41 UTC
Qt and KDE Framework translations are all translated in Simplified Chinese, I did that myself a long time ago, and they have been working fine for other packages.

I did not change Krita locale. The device's system locale is set to Simplified Chinese. Krita detected that and automatically sets its language to Simplified Chinese.

System Information:
Krita: 5.0.2
Languegs: zh_CN, zh

Template category translation displays correctly after I first set the device's system language to English, then manually switched Krita's language to Simplified Chinese.
Comment 5 Tyson Tan 2022-01-14 04:26:43 UTC
After I set the system locale back to Simplified Chinese, Krita is missing Template Category translations again after a cold restart.
Comment 6 Alvin Wong 2022-01-14 08:05:28 UTC
I mean the Qt and KDE Frameworks translation files aren't getting included in the Android builds. This is something that Sharaf will need to check.
Comment 7 Alvin Wong 2022-01-14 09:23:22 UTC
I think we should split the two issues. The template category names translations are unrelated to the missing Qt and KF5 translations.
Comment 8 sh_zam 2022-02-02 19:10:51 UTC
Git commit 9b12429f2f826bd3bf4653560b9b4e05d0ebf3ef by Sharaf Zaman.
Committed on 02/02/2022 at 19:09.
Pushed by szaman into branch 'master'.

Bugfix: kf5 and Qt translations missing on Android

M  +1    -0    3rdparty/CMakeLists.txt
M  +1    -1    3rdparty/ext_qt/CMakeLists.txt
M  +1    -1    krita/main.cc
M  +2    -1    packaging/android/androidbuild.sh

https://invent.kde.org/graphics/krita/commit/9b12429f2f826bd3bf4653560b9b4e05d0ebf3ef
Comment 9 sh_zam 2022-02-02 19:13:30 UTC
Hi! The fix doesn't fix the template category translation issues, it seems unrelated to this. But I'll take a look at it :)
Comment 10 Tyson Tan 2022-02-03 02:35:54 UTC
Thank you shzam! :D
Comment 11 sh_zam 2022-03-01 09:00:25 UTC
Git commit eef04429b5e358bb41ae150537bb729dd7eaec32 by Sharaf Zaman.
Committed on 01/03/2022 at 08:49.
Pushed by szaman into branch 'krita/5.0'.

Bugfix: kf5 and Qt translations missing on Android
(cherry picked from commit 9b12429f2f826bd3bf4653560b9b4e05d0ebf3ef)

M  +3    -1    3rdparty/CMakeLists.txt
M  +1    -1    3rdparty/ext_qt/CMakeLists.txt
M  +1    -1    krita/main.cc
M  +2    -1    packaging/android/androidbuild.sh

https://invent.kde.org/graphics/krita/commit/eef04429b5e358bb41ae150537bb729dd7eaec32
Comment 12 Alvin Wong 2022-06-12 15:23:05 UTC
*** Bug 455172 has been marked as a duplicate of this bug. ***
Comment 13 Halla Rempt 2022-06-15 09:52:47 UTC
*** Bug 455172 has been marked as a duplicate of this bug. ***
Comment 14 sh_zam 2022-06-16 19:22:35 UTC
Git commit 116165ee95ef514a68e2e7deff92b01ffbe811db by Sharaf Zaman.
Committed on 16/06/2022 at 19:18.
Pushed by szaman into branch 'master'.

Qt translations missing from binary factory builds

Selecting the translation location as krita-android-build didn't work on
binary factory because we didn't copy this directory as one of our
dependency artifacts. Now, we don't change the install location but
instead copy the files into locale during gradle build stage.

M  +1    -3    3rdparty/CMakeLists.txt
M  +1    -1    3rdparty/ext_qt/CMakeLists.txt
M  +2    -3    packaging/android/androidbuild.sh
M  +9    -1    packaging/android/apk/build.gradle

https://invent.kde.org/graphics/krita/commit/116165ee95ef514a68e2e7deff92b01ffbe811db
Comment 15 sh_zam 2022-06-16 19:24:00 UTC
Thanks, things should be really fixed this time! I'll ask Halla to run the deps build tomorrow and then the next nightly should be fixed :)
Comment 16 Halla Rempt 2022-06-17 08:23:28 UTC
I've started the builds.
Comment 17 Eranthis stellata Maxim 2022-06-18 04:04:49 UTC
Created attachment 149872 [details]
Save/Save As/Export/Export - advanced buttons don't show translations.

Thank you. @sh_zam 
I tested 5.2.0-prealpha (git 01a7589).
Most buttons display translations correctly.
In addition to the Save/Save As/Export/Export-advanced buttons (OK and Cancel).
These two buttons show the correct translation elsewhere.
Comment 18 sh_zam 2022-06-20 09:05:13 UTC
Git commit 6b6b9a9126fa68e4956dda918096d5cf16666bd9 by Sharaf Zaman.
Committed on 20/06/2022 at 08:54.
Pushed by szaman into branch 'master'.

Android: Add localized text to Ok+Cancel button in mimeSelector

M  +3    -0    libs/widgetutils/KoFileDialog.cpp

https://invent.kde.org/graphics/krita/commit/6b6b9a9126fa68e4956dda918096d5cf16666bd9
Comment 19 sh_zam 2022-07-28 15:58:33 UTC
Git commit 46eba9fb16d18deddcc55980068cb16984e04185 by Sharaf Zaman.
Committed on 28/07/2022 at 15:53.
Pushed by szaman into branch 'krita/5.1'.

Qt translations missing from binary factory builds

Selecting the translation location as krita-android-build didn't work on
binary factory because we didn't copy this directory as one of our
dependency artifacts. Now, we don't change the install location but
instead copy the files into locale during gradle build stage.
(cherry picked from commit 116165ee95ef514a68e2e7deff92b01ffbe811db)

M  +1    -3    3rdparty/CMakeLists.txt
M  +1    -1    3rdparty/ext_qt/CMakeLists.txt
M  +2    -3    packaging/android/androidbuild.sh
M  +9    -1    packaging/android/apk/build.gradle

https://invent.kde.org/graphics/krita/commit/46eba9fb16d18deddcc55980068cb16984e04185
Comment 20 sh_zam 2022-07-28 15:58:58 UTC
Git commit c23b836eccdc3fb58878d3e184bfc58968326d91 by Sharaf Zaman.
Committed on 28/07/2022 at 15:54.
Pushed by szaman into branch 'krita/5.1'.

Android: Add localized text to Ok+Cancel button in mimeSelector
(cherry picked from commit 6b6b9a9126fa68e4956dda918096d5cf16666bd9)

M  +3    -0    libs/widgetutils/KoFileDialog.cpp

https://invent.kde.org/graphics/krita/commit/c23b836eccdc3fb58878d3e184bfc58968326d91
Comment 21 Tyson Tan 2022-07-29 01:13:06 UTC
Thank you, sh_zam! :)