Bugfix: kf5 and Qt translations missing on Android

BUG:448343